--- a/DVF_to_SHP examples.ipynb
+++ b/DVF_to_SHP examples.ipynb
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -188,59 +188,228 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded (20871, 46) DataFrame\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 20871 entries, 995783 to 1017153\n",
-      "Data columns (total 46 columns):\n",
-      "Code service CH               0 non-null float64\n",
-      "Reference document            0 non-null float64\n",
-      "1 Articles CGI                0 non-null float64\n",
-      "2 Articles CGI                0 non-null float64\n",
-      "3 Articles CGI                0 non-null float64\n",
-      "4 Articles CGI                0 non-null float64\n",
-      "5 Articles CGI                0 non-null float64\n",
-      "No disposition                20871 non-null int64\n",
-      "Date mutation                 20871 non-null datetime64[ns]\n",
-      "Nature mutation               20871 non-null object\n",
-      "Valeur fonciere               20871 non-null float64\n",
-      "No voie                       20870 non-null float64\n",
-      "B/T/Q                         793 non-null object\n",
-      "Type de voie                  20848 non-null object\n",
-      "Code voie                     20871 non-null object\n",
-      "Voie                          20871 non-null object\n",
-      "Code postal                   20871 non-null object\n",
-      "Commune                       20871 non-null object\n",
-      "Code departement              20871 non-null object\n",
-      "Code commune                  20871 non-null int64\n",
-      "Prefixe de section            0 non-null float64\n",
-      "Section                       20871 non-null object\n",
-      "No plan                       20871 non-null object\n",
-      "No Volume                     0 non-null object\n",
-      "1er lot                       18961 non-null object\n",
-      "Surface Carrez du 1er lot     9495 non-null object\n",
-      "2eme lot                      7617 non-null object\n",
-      "Surface Carrez du 2eme lot    2355 non-null object\n",
-      "3eme lot                      1461 non-null object\n",
-      "Surface Carrez du 3eme lot    268 non-null object\n",
-      "4eme lot                      585 non-null float64\n",
-      "Surface Carrez du 4eme lot    72 non-null object\n",
-      "5eme lot                      263 non-null float64\n",
-      "Surface Carrez du 5eme lot    25 non-null object\n",
-      "Nombre de lots                20871 non-null int64\n",
-      "Code type local               20871 non-null float64\n",
-      "Type local                    20871 non-null object\n",
-      "Identifiant local             0 non-null float64\n",
-      "Surface reelle bati           20871 non-null float64\n",
-      "Nombre pieces principales     20871 non-null float64\n",
-      "Nature culture                1910 non-null object\n",
-      "Nature culture speciale       0 non-null object\n",
-      "Surface terrain               1910 non-null float64\n",
-      "Annee mutation                20871 non-null period[A-DEC]\n",
-      "Id                            20871 non-null object\n",
-      "prix m2                       20871 non-null float64\n",
-      "dtypes: datetime64[ns](1), float64(18), int64(3), object(23), period[A-DEC](1)\n",
-      "memory usage: 7.5+ MB\n"
+      "Loaded (20871, 46) DataFrame\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Code service CH</th>\n",
+       "      <th>Reference document</th>\n",
+       "      <th>1 Articles CGI</th>\n",
+       "      <th>2 Articles CGI</th>\n",
+       "      <th>3 Articles CGI</th>\n",
+       "      <th>4 Articles CGI</th>\n",
+       "      <th>5 Articles CGI</th>\n",
+       "      <th>No disposition</th>\n",
+       "      <th>Date mutation</th>\n",
+       "      <th>Nature mutation</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Type local</th>\n",
+       "      <th>Identifiant local</th>\n",
+       "      <th>Surface reelle bati</th>\n",
+       "      <th>Nombre pieces principales</th>\n",
+       "      <th>Nature culture</th>\n",
+       "      <th>Nature culture speciale</th>\n",
+       "      <th>Surface terrain</th>\n",
+       "      <th>Annee mutation</th>\n",
+       "      <th>Id</th>\n",
+       "      <th>prix m2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>995783</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2019-04-01</td>\n",
+       "      <td>Vente</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Appartement</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>112.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>75101000BC0014</td>\n",
+       "      <td>1.067857e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995784</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2019-03-01</td>\n",
+       "      <td>Vente</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Dépendance</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>75103000AL0015</td>\n",
+       "      <td>inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995785</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2019-03-01</td>\n",
+       "      <td>Vente</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Appartement</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>75103000AL0015</td>\n",
+       "      <td>1.510087e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995786</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2019-08-01</td>\n",
+       "      <td>Vente</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Dépendance</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>75108000AP0016</td>\n",
+       "      <td>inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995787</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2019-03-01</td>\n",
+       "      <td>Vente</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Appartement</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>75103000AV0022</td>\n",
+       "      <td>2.571429e+02</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 46 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Code service CH  Reference document  1 Articles CGI  2 Articles CGI  \\\n",
+       "995783              NaN                 NaN             NaN             NaN   \n",
+       "995784              NaN                 NaN             NaN             NaN   \n",
+       "995785              NaN                 NaN             NaN             NaN   \n",
+       "995786              NaN                 NaN             NaN             NaN   \n",
+       "995787              NaN                 NaN             NaN             NaN   \n",
+       "\n",
+       "        3 Articles CGI  4 Articles CGI  5 Articles CGI  No disposition  \\\n",
+       "995783             NaN             NaN             NaN               1   \n",
+       "995784             NaN             NaN             NaN               1   \n",
+       "995785             NaN             NaN             NaN               1   \n",
+       "995786             NaN             NaN             NaN               1   \n",
+       "995787             NaN             NaN             NaN               1   \n",
+       "\n",
+       "       Date mutation Nature mutation  ...   Type local  Identifiant local  \\\n",
+       "995783    2019-04-01           Vente  ...  Appartement                NaN   \n",
+       "995784    2019-03-01           Vente  ...   Dépendance                NaN   \n",
+       "995785    2019-03-01           Vente  ...  Appartement                NaN   \n",
+       "995786    2019-08-01           Vente  ...   Dépendance                NaN   \n",
+       "995787    2019-03-01           Vente  ...  Appartement                NaN   \n",
+       "\n",
+       "       Surface reelle bati Nombre pieces principales Nature culture  \\\n",
+       "995783               112.0                       3.0            NaN   \n",
+       "995784                 0.0                       0.0            NaN   \n",
+       "995785               104.0                       3.0            NaN   \n",
+       "995786                 0.0                       0.0            NaN   \n",
+       "995787                21.0                       1.0            NaN   \n",
+       "\n",
+       "       Nature culture speciale Surface terrain Annee mutation              Id  \\\n",
+       "995783                     NaN             NaN           2019  75101000BC0014   \n",
+       "995784                     NaN             NaN           2019  75103000AL0015   \n",
+       "995785                     NaN             NaN           2019  75103000AL0015   \n",
+       "995786                     NaN             NaN           2019  75108000AP0016   \n",
+       "995787                     NaN             NaN           2019  75103000AV0022   \n",
+       "\n",
+       "             prix m2  \n",
+       "995783  1.067857e+04  \n",
+       "995784           inf  \n",
+       "995785  1.510087e+04  \n",
+       "995786           inf  \n",
+       "995787  2.571429e+02  \n",
+       "\n",
+       "[5 rows x 46 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -259,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +523,7 @@
        "75101000AP  (POLYGON ((652219.6584116643 6862510.028696066...          4  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,14 +559,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import geopandas\n",
     "\n",
-    "sections_geo = geopandas.GeoDataFrame(av_price_by_section.reset_index(), geometry='coords')\n",
-    "sections_geo.to_file('sections-75-prix.shp', driver='ESRI Shapefile')"
+    "sections_geo = geopandas.GeoDataFrame(av_price_by_section.reset_index(), geometry='section_coords')\n",
+    "sections_geo.to_file('data/sections-75-prix.shp', driver='ESRI Shapefile')"
    ]
   }
  ],
